# CTensor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_asan.bat  build_debug.bat  build_release.bat
include/: tren.h  tren_types.h
src/backend/: backend.h  cpu_naive.c  cpu_optim.c
src/core/: autograd.c  autograd.h  storage.c  tensor.c  tensor.h
src/ops/: backward.c  backward.h  functional.c
src/utils/: error.h  utils.c  utils.h
tests/: test_autograd.c  test_manual.c  test_memory.c  test_ml.c  test_ops_binary.c  test_ops_unary.c  test_runner.c  test_tensor_basic.c  test_utils.c  test_utils.h
